; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_mvdec.c_read_table.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_mvdec.c_read_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32* }

@AVERROR_EOF = common dso_local global i32 0, align 4
@AV_LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"entry size %d is invalid\0A\00", align 1
@AVERROR_INVALIDDATA = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [12 x i8] c"Variable %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_7__*, i32*, i32 (%struct.TYPE_7__*, i32*, i8*, i32)*)* @read_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_table(%struct.TYPE_7__* %0, i32* %1, i32 (%struct.TYPE_7__*, i32*, i8*, i32)* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32 (%struct.TYPE_7__*, i32*, i8*, i32)*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca [17 x i8], align 16
  %12 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 (%struct.TYPE_7__*, i32*, i8*, i32)* %2, i32 (%struct.TYPE_7__*, i32*, i8*, i32)** %7, align 8
  %13 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  store i32* %15, i32** %10, align 8
  %16 = load i32*, i32** %10, align 8
  %17 = call i32 @avio_skip(i32* %16, i32 4)
  %18 = load i32*, i32** %10, align 8
  %19 = call i8* @avio_rb32(i32* %18)
  %20 = ptrtoint i8* %19 to i32
  store i32 %20, i32* %8, align 4
  %21 = load i32*, i32** %10, align 8
  %22 = call i32 @avio_skip(i32* %21, i32 4)
  store i32 0, i32* %9, align 4
  br label %23

23:                                               ; preds = %65, %3
  %24 = load i32, i32* %9, align 4
  %25 = load i32, i32* %8, align 4
  %26 = icmp ult i32 %24, %25
  br i1 %26, label %27, label %68

27:                                               ; preds = %23
  %28 = load i32*, i32** %10, align 8
  %29 = call i64 @avio_feof(i32* %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %27
  %32 = load i32, i32* @AVERROR_EOF, align 4
  store i32 %32, i32* %4, align 4
  br label %69

33:                                               ; preds = %27
  %34 = load i32*, i32** %10, align 8
  %35 = getelementptr inbounds [17 x i8], [17 x i8]* %11, i64 0, i64 0
  %36 = call i32 @avio_read(i32* %34, i8* %35, i32 16)
  %37 = getelementptr inbounds [17 x i8], [17 x i8]* %11, i64 0, i64 16
  store i8 0, i8* %37, align 16
  %38 = load i32*, i32** %10, align 8
  %39 = call i8* @avio_rb32(i32* %38)
  %40 = ptrtoint i8* %39 to i32
  store i32 %40, i32* %12, align 4
  %41 = load i32, i32* %12, align 4
  %42 = icmp slt i32 %41, 0
  br i1 %42, label %43, label %49

43:                                               ; preds = %33
  %44 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %45 = load i32, i32* @AV_LOG_ERROR, align 4
  %46 = load i32, i32* %12, align 4
  %47 = call i32 @av_log(%struct.TYPE_7__* %44, i32 %45, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %46)
  %48 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %48, i32* %4, align 4
  br label %69

49:                                               ; preds = %33
  %50 = load i32 (%struct.TYPE_7__*, i32*, i8*, i32)*, i32 (%struct.TYPE_7__*, i32*, i8*, i32)** %7, align 8
  %51 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %52 = load i32*, i32** %6, align 8
  %53 = getelementptr inbounds [17 x i8], [17 x i8]* %11, i64 0, i64 0
  %54 = load i32, i32* %12, align 4
  %55 = call i32 %50(%struct.TYPE_7__* %51, i32* %52, i8* %53, i32 %54)
  %56 = icmp slt i32 %55, 0
  br i1 %56, label %57, label %64

57:                                               ; preds = %49
  %58 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %59 = getelementptr inbounds [17 x i8], [17 x i8]* %11, i64 0, i64 0
  %60 = call i32 @avpriv_request_sample(%struct.TYPE_7__* %58, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i8* %59)
  %61 = load i32*, i32** %10, align 8
  %62 = load i32, i32* %12, align 4
  %63 = call i32 @avio_skip(i32* %61, i32 %62)
  br label %64

64:                                               ; preds = %57, %49
  br label %65

65:                                               ; preds = %64
  %66 = load i32, i32* %9, align 4
  %67 = add nsw i32 %66, 1
  store i32 %67, i32* %9, align 4
  br label %23

68:                                               ; preds = %23
  store i32 0, i32* %4, align 4
  br label %69

69:                                               ; preds = %68, %43, %31
  %70 = load i32, i32* %4, align 4
  ret i32 %70
}

declare dso_local i32 @avio_skip(i32*, i32) #1

declare dso_local i8* @avio_rb32(i32*) #1

declare dso_local i64 @avio_feof(i32*) #1

declare dso_local i32 @avio_read(i32*, i8*, i32) #1

declare dso_local i32 @av_log(%struct.TYPE_7__*, i32, i8*, i32) #1

declare dso_local i32 @avpriv_request_sample(%struct.TYPE_7__*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
